--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.platform=postgres
 
 # jpa
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
+
+
 #server.port=8080
