--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/igreja
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.platform=postgres
+spring.datasource.initialization-mode=always
 
 # jpa
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
-
 
 #server.port=8080
