--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 
-#server.port=8080
+server.port=8081
